--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,12 @@
+<div class="card">
+  <div class="card-body">
+    <p class="card-text">{{card.question}}</p>
+    
+    <button type="button" class="btn btn-block btn-primary" *ngFor="let answer of card.answers">{{answer}}</button>
+    
+  </div>
+</div>
+
 <p>
   {{result | json}}
 </p>
