--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,12 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4" *ngFor="let card of cards">
-      <div class="card">
-        <div class="card-body">
-          <p class="card-text">{{card.question}}</p>
-          <button type="button" class="btn btn-block btn-primary" *ngFor="let answer of card.answers">{{answer}}</button>
-        </div>
-      </div>
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4" *ngFor="let myCard of cards">
+      <app-card [card]="myCard"></app-card>
     </div>
   </div>
 </div>
